[tool.poetry]
name = "mongojuuid"
version = "0.1.2"
description = "CLI to convert BinData Subtype 3 to JUUID and vice-versa"
authors = ["Mustafa Caylak <mustafa.caylak@web.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/luxmeter/mongojuuid"
keywords = ["mongo", "uuid", "java"]
include = [
    "LICENSE",
]

classifiers = [
    "Topic :: Database",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.build]
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mongojuuid = "mongojuuid.main:app"
